Adicionando histórias de usuário

--- a/editaveis/gerencia.tex
+++ b/editaveis/gerencia.tex
@@ -158,7 +158,149 @@
 
 \subsection{Requisitos elicitados}
 
-  Em construção\ldots
+  \subsubsection{História de usuário 1}
+    \textbf{Eu} como usuário, \textbf{desejo} salvar uma imagem de satélite. \textbf{Para que eu possa} acessar a qualquer momento e local posteriormente
+
+    Prioridade: \textbf{Alta}
+
+    Dificuldade: 5
+
+  \subsubsection{História de usuário 2}
+
+    \textbf{Eu} como usuário, \textbf{desejo} acessar uma imagem de satélite do banco. \textbf{Para que eu possa} realizar meu trabalho
+
+    Prioridade: \textbf{Alta}
+
+    Dificuldade: 3
+
+  \subsubsection{História de usuário 3}
+
+    \textbf{Eu} como usuário, \textbf{desejo} excluir uma imagem de satélite do banco. \textbf{Para que eu possa} organizar melhor meus arquivos
+
+    Prioridade: \textbf{Média}
+
+    Dificuldade: 3
+
+  \subsubsection{História de usuário 4}
+    \textbf{Eu} como usuário, \textbf{desejo} salvar um projeto ArcGIS. \textbf{Para que eu possa} acessar a qualquer momento e local posteriormente
+
+    Prioridade: \textbf{Alta}
+
+    Dificuldade: 8
+
+  \subsubsection{História de usuário 5}
+    \textbf{Eu} como usuário, \textbf{desejo} acessar um projeto ArcGIS. \textbf{Para que eu possa} realizar meu trabalho
+
+    Prioridade: \textbf{Alta}
+
+    Dificuldade: 5
+
+  \subsubsection{História de usuário 6}
+    \textbf{Eu} como usuário, \textbf{desejo} excluir um projeto ArcGIS. \textbf{Para que eu possa} organizar melhor meus arquivos
+
+    Prioridade: \textbf{Alta}
+
+    Dificuldade: 5
+
+  \subsubsection{História de usuário 7}
+    \textbf{Eu} como usuário, \textbf{desejo} alterar um projeto ArcGIS. \textbf{Para que eu possa} consertar possíveis erros
+
+    Prioridade: \textbf{Baixa}
+
+    Dificuldade: 5
+
+  \subsubsection{História de usuário 8}
+    \textbf{Eu} como desenvolvedor, \textbf{desejo} implementar um sistema de criptografia. \textbf{Para que eu possa} garantir segurança aos dados
+
+    Prioridade: \textbf{Média}
+
+    Dificuldade: 8
+
+  \subsubsection{História de usuário 9}
+    \textbf{Eu} como desenvolvedor, \textbf{desejo} implementar um sistema de validação de integridade dos arquivos. \textbf{Para que eu possa} garantir que os dados não sejam corrompidos 
+
+    Prioridade: \textbf{Média}
+
+    Dificuldade: 8
+
+  \subsubsection{História de usuário 10}
+    \textbf{Eu} como desenvolvedor, \textbf{desejo} implementar um sistema de backup. \textbf{Para que eu possa} garantir maior integridade ao banco
+
+    Prioridade: \textbf{Média}
+
+    Dificuldade: 8
+
+  \subsubsection{História de usuário 11}
+    \textbf{Eu} como administrador, \textbf{desejo} um sistema de permissões. \textbf{Para que eu possa} garantir acesso aos dados somente por autorizados 
+
+    Prioridade: \textbf{Alta}
+
+    Dificuldade: 8
+
+  \subsubsection{História de usuário 12}
+    \textbf{Eu} como usuário, \textbf{desejo} me cadastrar na ferramenta. \textbf{Para que eu possa} utilizar a mesma 
+
+    Prioridade: \textbf{Alta}
+
+    Dificuldade: 5
+
+  \subsubsection{História de usuário 13}
+    \textbf{Eu} como usuário, \textbf{desejo} editar meu perfil. \textbf{Para que eu possa} atualizar minhas informações
+
+    Prioridade: \textbf{Média}
+
+    Dificuldade: 5
+
+  \subsubsection{História de usuário 14}
+    \textbf{Eu} como administrador, \textbf{desejo} ser capaz de deletar perfis de usuário. \textbf{Para que eu possa} remover contas de usuário que não trabalham mais na empresa
+
+    Prioridade: \textbf{Alta}
+
+    Dificuldade: 3
+
+  \subsubsection{História de usuário 15}
+    \textbf{Eu} como administrador, \textbf{desejo} uma ferramenta de log. \textbf{Para que eu possa} acompanhar as atividade dos funcionários 
+
+    Prioridade: \textbf{Média}
+
+    Dificuldade: 8
+
+  \subsubsection{História de usuário 16}
+    \textbf{Eu} como usuário, \textbf{desejo} visualizar informações da imagem. \textbf{Para que eu possa} ter acesso a imagem específica que tenho interesse
+
+    Prioridade: \textbf{Média}
+
+    Dificuldade: 3
+
+  \subsubsection{História de usuário 17}
+    \textbf{Eu} como usuário, \textbf{desejo} visualizar informações do projeto. \textbf{Para que eu possa} ter acesso ao projeto específico que tenho interesse
+
+    Prioridade: \textbf{Média}
+
+    Dificuldade: 5
+
+  \subsubsection{História de usuário 18}
+    \textbf{Eu} como usuário, \textbf{desejo} poder criar pastas. \textbf{Para que eu possa} organizar da maneira que desejar meus projetos
+
+    Prioridade: \textbf{Média}
+
+    Dificuldade: 3
+
+  \subsubsection{História de usuário 19}
+    \textbf{Eu} como usuário, \textbf{desejo} renomear arquivos. \textbf{Para que eu possa} organizar da maneira que desejar meus projetos
+
+    Prioridade: \textbf{Média}
+
+    Dificuldade: 5
+
+  \subsubsection{História de usuário 20}
+    \textbf{Eu} como usuário, \textbf{desejo} mover arquivos. \textbf{Para que eu possa} organizar da maneira que desejar meus projetos
+
+    Prioridade: \textbf{Média}
+
+    Dificuldade: 5
+
+
 
 \section{Gerência de mudança}
 
