--- a/editaveis/visao.tex
+++ b/editaveis/visao.tex
@@ -253,6 +253,25 @@
   prover as imagens.
 
 \subsection{Recursos do produto}
+ \begin{table}[!htb]
+    \centering
+    \rowcolors{2}{gray!25}{white}
+    \begin{tabular}{p{3,5cm}p{6cm}p{6cm}} \hline
+      \rowcolor{gray!50}
+        \textbf{Capacidade}           & \textbf{Descrição}                                                           \\
+      \hline
+        Gerenciamento de artefatos e produtos    & Permite com que a empresa consiga gerenciar imagens de satélites e projetos do ArcGIS, de acordo com o nível de permissão.                                                              \\
+        Gerenciamento de usuários  & Permite com que gerencia os usuários e também suas permissões de acessos.                                                                \\
+        Garantia da integridade    & Permite a garantia da integridade dos produtos realizados pela empresa, na qual o software realizará semanalmente, o backup dos arquivos armazenados.
+                                                                                \\
+        Personalização do banco    & Permite com que os artefatos e produtos sejam organizados de maneira customizada pela empresa.                                       \\
+                                                                                                                                              
+
+                                                                                       
+    \end{tabular}
+    \caption{Capacidade}
+  \end{table}
+
 
   Logo a solução possuirá algumas características principais:
 
@@ -262,6 +281,8 @@
     \item Mais segurança de seus produtos que serão salvos no banco;
     \item Armazenamento maior para que eles não tenham receio de guardar imagens de satélites.
   \end{itemize}
+
+
 
 \section{Restrições do Projeto}
 
