Adicionando Diagrama de Fishbone

--- a/editaveis/anexo.tex
+++ b/editaveis/anexo.tex
@@ -6,6 +6,10 @@
 
     \label{fishbone}
 
-    IMAGEM DO DIAGRAMA DE FISHBONE
+    \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=15cm, keepaspectratio=true]{figuras/anexos/Fishbone.eps}
+    \caption{Diagrama de Fishbone}
+  \end{figure}
  
 \end{anexosenv}
