Adicionando imagens dos protótipos

--- a/editaveis/gerencia.tex
+++ b/editaveis/gerencia.tex
@@ -172,11 +172,27 @@
     \item Gerenciar US
   \end{itemize}
 
+\clearpage
 \subsection{Elicitação}
   Na atividade para validar as histórias levantadas, utilizamos da técnica prototipação, com o intuito de verificar se o que o Time estava imaginando, era realmente o que a empresa queria.
 \subsubsection{Prototipação}
-  TODO: [INSERIR IMAGENS DO PROTOTIPO AQUI]
+  
+  \label{pagina-inicial}
 
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/gerencia/pagina-inicial.eps}
+    \caption{Protótipo da página onde é realizado o login do usuário}
+  \end{figure}
+
+
+  \label{pagina-upload}
+
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/gerencia/pagina-upload.eps}
+    \caption{Protótipo da página onde é realizado o upload de imagens de satélite ou projetos do ArcGis}
+  \end{figure}
 
 \subsection{Requisitos elicitados}
 
