Arrumando layout do latex e inserindo o gitignore

--- a/editaveis/gerencia.tex
+++ b/editaveis/gerencia.tex
@@ -18,17 +18,16 @@
     \item Priorizar épicos
     \item Gerenciar épicos
   \end{itemize}
+
 \subsection{Elicitação}
   Nas atividades de aprendizado do contexto da empresa, definição dos temas estratégicos, épicos e enablers, decidimos utilizar a técnica Entrevista, devido ao fato dela não ser muito complexa de se realizar e ser muito boa para dar início as primeiras conversas com o cliente.
   A entrevista foi realizada com a presidente da empresa Larisse Ferreira, que também é a Product Owner do projeto.
+
 \subsubsection{Entrevista}
-  Entrevista foi realizada tanto através de perguntas pré-elaboradas para as reuniões quanto perguntas espontâneas que apareceram durante as reuniões. As perguntas que elaboramos previamente foram:
-  \begin{itemize}
-    \item \textbf{Quais os problemas que vocês enfrentam?}
-    \item \textbf{Qual desses problemas vocês querem que nós resolvamos através de um software e em qual área?}
-    \item \textbf{Quais as funções que vocês queiram que tenha no software?}
-    \item \textbf{Quais as restrições que vocês conseguem enxergar para que o software de vocês tenham?}
-  \end{itemize}
+  Entrevista foi realizada tanto através de perguntas pré-elaboradas para as reuniões quanto perguntas espontâneas que apareceram durante as
+  reuniões. As perguntas que elaboramos previamente foram: \textbf{Quais os problemas que vocês enfrentaram? Qual desses problemas vocês querem
+    que nós resolvamos através de um software e em qual área? Quais as funções que vocês queiram que tenham no software? e quais as restrições
+  que vocês conseguem enxergar para que o software de vocês tenham?}.
 
 \subsection{Requisitos elicitados}
 
@@ -73,6 +72,8 @@
     \caption{Épico 01}
   \end{table}
 
+  \newpage
+
 \subsubsection{Épico 02: Criar servidor}
 
   \begin{table}[!htb]
@@ -114,6 +115,7 @@
 
 \subsection{Elicitação}
   Na atividade de definir features e enablers, utilizamos a técnica de elicitação conhecida como \textit{brainstorm}. É uma técnica que quando bem executada, consegue produzir bastante ideias criativas.
+
 \subsubsection{Brainstorm}
   A sessão que durou cerca de 20 minutos teve como participação a presidente da empresa Larisse Ferreira e o diretor de recursos humanos Fábio Osório. Todas as features que definimos foram resultado dessa sessão.
 
@@ -172,11 +174,10 @@
     \item Gerenciar US
   \end{itemize}
 
-\clearpage
 \subsection{Elicitação}
   Na atividade para validar as histórias levantadas, utilizamos da técnica prototipação, com o intuito de verificar se o que o Time estava imaginando, era realmente o que a empresa queria.
 \subsubsection{Prototipação}
-  
+
   \label{pagina-inicial}
 
   \begin{figure}[!htb]
@@ -191,7 +192,7 @@
   \begin{figure}[!htb]
     \centering
     \includegraphics[width=10cm, keepaspectratio=false]{figuras/gerencia/pagina-upload.eps}
-    \caption{Protótipo da página onde é realizado o upload de imagens de satélite ou projetos do ArcGis}
+    \caption{Protótipo da página onde é realizado o upload de imagens}
   \end{figure}
 
 \subsection{Requisitos elicitados}
