--- a/editaveis/gerencia.tex
+++ b/editaveis/gerencia.tex
@@ -346,3 +346,64 @@
 
   Em construção\ldots
 
+\section{Rastreabilidade}
+
+  Nesse tópico será apresentada a rastreabilidade vertical e horizontal dos requisitos elicitados.
+
+\subsection{Rastreabilidade Vertical}
+
+A rastreabilidade vertical pode ser percebida em “níveis” o mais alto e mais próximo do mundo real são os épicos, que são separadas em features e implementadas em histórias de usuário. A ferramenta Targetprocess apresenta essa rastreabilidade de uma maneira bastante simple e intuitiva. 
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/vertical/features.eps}
+    \caption{Visão geral da rastreabilidade. O épico Criação de Banco e suas Features}
+  \end{figure}
+
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/vertical/feature_criptografia.eps}
+    \caption{Rastreabilidade vertical entre Épico Criação de Banco e a Feature Criptografia e sua História de Usuário Criptografar Dados}
+  \end{figure}
+
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/vertical/feature_gerenciar_usuario.eps}
+    \caption{Rastreabilidade vertical entre Épico Criação de Banco e a Feature Gerenciar Usuário e suas História de Usuário}
+  \end{figure}
+
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/vertical/feature_personalizar_banco.eps}
+    \caption{Rastreabilidade vertical entre Épico Criação de Banco e a Feature Personalizar Banco e suas História de Usuário}
+  \end{figure}
+
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/vertical/feature_gerenciar_imagens.eps}
+    \caption{Rastreabilidade vertical entre Épico Criação de Banco e a Feature Gerenciar Imagens de Satélite e suas História de Usuário}
+  \end{figure}
+
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/vertical/feature_expor.eps}
+    \caption{Rastreabilidade vertical entre Épico Criação de Banco e a Feature Expor Informações dos Arquivos e suas História de Usuário}
+  \end{figure}
+
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/vertical/feature_gerenciar_projeto.eps}
+    \caption{Rastreabilidade vertical entre Épico Criação de Banco e a Feature Gerenciar Projetos de ArcGIS e suas História de Usuário}
+  \end{figure}
+
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/vertical/feature_integridade.eps}
+    \caption{Rastreabilidade vertical entre Épico Criação de Banco e a Feature Integridade e suas História de Usuário}
+  \end{figure}
+
+
+
+
+\subsection{Rastreabilidade Horizontal}
+
