--- a/editaveis/gerencia.tex
+++ b/editaveis/gerencia.tex
@@ -159,7 +159,15 @@
 
 \subsection{Roadmap}
 
-  Em construção\ldots
+  O roadmap foi contruído para guiar o incremento do produto com as metas em função do tempo.
+  Com as features priorizadas para essa primeira sprint após o PI planning foi possível
+  verificar quais features seriam agregadas para a primeira release.
+
+  \begin{figure}[!h]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=true]{figuras/gerencia/roadmap.eps}
+    \caption{Roadmap}
+  \end{figure}
 
 \section{Nível de time}
 
@@ -256,7 +264,7 @@
     Dificuldade: 8
 
   \subsubsection{História de usuário 9}
-    \textbf{Eu} como desenvolvedor, \textbf{desejo} implementar um sistema de validação de integridade dos arquivos. \textbf{Para que eu possa} garantir que os dados não sejam corrompidos 
+    \textbf{Eu} como desenvolvedor, \textbf{desejo} implementar um sistema de validação de integridade dos arquivos. \textbf{Para que eu possa} garantir que os dados não sejam corrompidos
 
     Prioridade: \textbf{Média}
 
@@ -270,14 +278,14 @@
     Dificuldade: 8
 
   \subsubsection{História de usuário 11}
-    \textbf{Eu} como administrador, \textbf{desejo} um sistema de permissões. \textbf{Para que eu possa} garantir acesso aos dados somente por autorizados 
+    \textbf{Eu} como administrador, \textbf{desejo} um sistema de permissões. \textbf{Para que eu possa} garantir acesso aos dados somente por autorizados
 
     Prioridade: \textbf{Alta}
 
     Dificuldade: 8
 
   \subsubsection{História de usuário 12}
-    \textbf{Eu} como usuário, \textbf{desejo} me cadastrar na ferramenta. \textbf{Para que eu possa} utilizar a mesma 
+    \textbf{Eu} como usuário, \textbf{desejo} me cadastrar na ferramenta. \textbf{Para que eu possa} utilizar a mesma
 
     Prioridade: \textbf{Alta}
 
@@ -298,7 +306,7 @@
     Dificuldade: 3
 
   \subsubsection{História de usuário 15}
-    \textbf{Eu} como administrador, \textbf{desejo} uma ferramenta de log. \textbf{Para que eu possa} acompanhar as atividade dos funcionários 
+    \textbf{Eu} como administrador, \textbf{desejo} uma ferramenta de log. \textbf{Para que eu possa} acompanhar as atividade dos funcionários
 
     Prioridade: \textbf{Média}
 
@@ -353,7 +361,7 @@
 
 \subsection{Rastreabilidade Vertical}
 
-A rastreabilidade vertical pode ser percebida em “níveis” o mais alto e mais próximo do mundo real são os épicos, que são separadas em features e implementadas em histórias de usuário. A ferramenta Targetprocess apresenta essa rastreabilidade de uma maneira bastante simple e intuitiva. 
+A rastreabilidade vertical pode ser percebida em “níveis” o mais alto e mais próximo do mundo real são os épicos, que são separadas em features e implementadas em histórias de usuário. A ferramenta Targetprocess apresenta essa rastreabilidade de uma maneira bastante simple e intuitiva.
 
 \begin{figure}[!htb]
     \centering
@@ -407,4 +415,3 @@ A rastreabilidade vertical pode ser percebida em “níveis” o mais alto e mai
 
 
 \subsection{Rastreabilidade Horizontal}
-
