rastreabilidade horizontal criptografia ok

--- a/editaveis/gerencia.tex
+++ b/editaveis/gerencia.tex
@@ -415,3 +415,19 @@ A rastreabilidade vertical pode ser percebida em “níveis” o mais alto e mai
 
 
 \subsection{Rastreabilidade Horizontal}
+
+ % Criptografia
+
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/horizontal/criptografia/feature_criptografia.eps}
+    \caption{Rastreabilidade Horizontal entre Feature Criptografia e as demais Features}
+  \end{figure}
+
+    \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/horizontal/criptografia/Criptografar_dados.eps}
+    \caption{Rastreabilidade Horizontal entre a História de Usuário Criptografar Dados e as Histórias da Feature}
+  \end{figure}
+
+  
