rastreabilidade horizontal expor informações ok

--- a/editaveis/gerencia.tex
+++ b/editaveis/gerencia.tex
@@ -430,4 +430,16 @@ A rastreabilidade vertical pode ser percebida em “níveis” o mais alto e mai
     \caption{Rastreabilidade Horizontal entre a História de Usuário Criptografar Dados e as Histórias da Feature}
   \end{figure}
 
-  
+  % Expor Informacoes
+
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/horizontal/expor_info/feature_expor_info.eps}
+    \caption{Rastreabilidade Horizontal entre Feature Expor Informações dos Arquivos e as demais Features}
+  \end{figure}
+
+    \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/horizontal/expor_info/historia_info_imagem.eps}
+    \caption{Rastreabilidade Horizontal entre a História de Usuário Informações Imagens de Satélite Dados e as Histórias da Feature}
+  \end{figure}
