rastreabilidade horizontal gerencia usuarios

--- a/editaveis/gerencia.tex
+++ b/editaveis/gerencia.tex
@@ -443,3 +443,36 @@ A rastreabilidade vertical pode ser percebida em “níveis” o mais alto e mai
     \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/horizontal/expor_info/historia_info_imagem.eps}
     \caption{Rastreabilidade Horizontal entre a História de Usuário Informações Imagens de Satélite Dados e as Histórias da Feature}
   \end{figure}
+
+   % Gerenciar Imagens 
+
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/horizontal/gerenciar_imagens/feature_gerenciar_imagem.eps}
+    \caption{Rastreabilidade Horizontal entre Feature Gerenciar Imagens de Satélite e as demais Features}
+  \end{figure}
+
+    \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/horizontal/gerenciar_imagens/historia_inserir_imgagem.eps}
+    \caption{Rastreabilidade Horizontal entre a História de Usuário Inserir Imagem de Satélite e as Histórias da Feature}
+  \end{figure}
+
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/horizontal/gerenciar_imagens/historia_acessar_imagem.eps}
+    \caption{Rastreabilidade Horizontal entre a História de Usuário Acessar uma Imagem de Satélite e as Histórias da Feature}
+  \end{figure}
+
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/horizontal/gerenciar_imagens/historia_excluir_imagem.eps}
+    \caption{Rastreabilidade Horizontal entre a História de Usuário Excluir Imagem de Satélite e
+as Histórias da Feature}
+  \end{figure}
+
+  \begin{figure}[!htb]
+    \centering
+    \includegraphics[width=10cm, keepaspectratio=false]{figuras/rastreabilidade/horizontal/gerenciar_imagens/historia_avaliar_satelite.eps}
+    \caption{Rastreabilidade Horizontal entre a História Enabler Avaliar interface Gerenciar Imagens de Satélite e as Histórias da Feature}
+  \end{figure}
