--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,13 +1,19 @@
-@article{rafael2009,
-  Author = {Rafael Richa Teixeira Ananias},
-  Title = {Estudo comparativo entre ferramentas de Gerência de Requisitos},
-  Year = {2009},
-  Address = {Universidade Federal de Pernambuco},
- }
+@book{req01,
+  Author = {COHN, M},
+  Title = {User Stories Applied: For Agile Software Development.},
+  Year = {2010},
+}
 
-@book{RUP,
-   author = "Ahmad K. Shuja & Jochen Krebs",
-   title = "IBM Rational Unified Process Reference and Certification Guide: Solution Designer (RUP) (IBM Press)",
-   chapter = "1",
-   year = "2011"
- }
+@book{req02,
+  Author = {LEFFINGWELL},
+  Title = {Agile Software Requirement.},
+  Year = {2011},
+  URL = {http://www.scaledagileframework.com/}
+}
+
+@book{req03,
+  Author = {LEFFINGWELL, D.; BEHRENS, P},
+  Title = {A User Story Primer},
+  Year = {2010},
+}
+
