--- a/editaveis/introducao.tex
+++ b/editaveis/introducao.tex
@@ -2,7 +2,7 @@
 
   Nesse documento está todo o planejamento, discussão e análises que envolvem o gerenciamento dos requisitos de um produto de
   software, os requisitos serão constantemente sendo aprimorado ao longo da disciplina de Requisitos de Software na Universidade
-  de Brasília $-$ UnB.
+  de Brasília $-$ UnB, todo o conteúdo foi baseado nos livros\cite{req01},\cite{req02},\cite{req03}.
 
   Este relatório está dividido em algumas partes excenciais para a boa realização do mesmo, na qual temos a parte de entendimento do negocio
   processos de Engenharia de Requisitos (ER), criado com base no SAFe (Scaled Agile Framework) e apoiado em um modelo de maturidade chamado
