--- a/editaveis/gerencia.tex
+++ b/editaveis/gerencia.tex
@@ -356,21 +356,27 @@
 A rastreabilidade vertical pode ser percebida em “níveis” o mais alto e mais próximo do mundo real são os épicos, que são separadas em features e implementadas em histórias de usuário. A ferramenta Targetprocess apresenta essa rastreabilidade de uma maneira bastante simple e intuitiva.
 
   \begin{figure}[!htb]
-    \centering
-    \includegraphics[width=6cm, keepaspectratio=false]{figuras/rastreabilidade/vertical/features.eps}
-    \caption{Visão geral da rastreabilidade. O épico Criação de Banco e suas Features}
+    \begin{minipage}{7cm}
+      \centering
+      \includegraphics[scale=0.6]{figuras/rastreabilidade/vertical/epico_banco.eps}
+    \end{minipage}\hspace{2cm}
+    \begin{minipage}{7cm}
+      \centering
+      \includegraphics[scale=0.5]{figuras/rastreabilidade/vertical/epico_servidor.eps}
+    \end{minipage}\hspace{2cm}
+    \caption{Visão geral da rastreabilidade. O épico Criação de banco e servidor e suas features}
   \end{figure}
 
   \begin{figure}[!htb]
     \centering
     \includegraphics[width=7cm, keepaspectratio=false]{figuras/rastreabilidade/vertical/feature_criptografia.eps}
-    \caption{Rastreabilidade vertical entre Épico Criação de Banco e a Feature Criptografia e sua História de Usuário Criptografar Dados}
+    \caption{Rastreabilidade vertical entre Épico Criação do servidor e a Feature Criptografia e sua História de Usuário Criptografar Dados}
   \end{figure}
 
   \begin{figure}[!htb]
     \centering
     \includegraphics[width=7cm, keepaspectratio=false]{figuras/rastreabilidade/vertical/feature_gerenciar_usuario.eps}
-    \caption{Rastreabilidade vertical entre Épico Criação de Banco e a Feature Gerenciar Usuário e suas História de Usuário}
+    \caption{Rastreabilidade vertical entre Épico Criação do servidor e a Feature Gerenciar Usuário e suas História de Usuário}
   \end{figure}
 
   \begin{figure}[!htb]
@@ -400,7 +406,7 @@ A rastreabilidade vertical pode ser percebida em “níveis” o mais alto e mai
   \begin{figure}[!htb]
     \centering
     \includegraphics[width=7cm, keepaspectratio=false]{figuras/rastreabilidade/vertical/feature_integridade.eps}
-    \caption{Rastreabilidade vertical entre Épico Criação de Banco e a Feature Integridade e suas História de Usuário}
+    \caption{Rastreabilidade vertical entre Épico Criação do servidor e a Feature Integridade e suas História de Usuário}
   \end{figure}
 
   \clearpage
